--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -395,3 +395,211 @@ DELETE FROM inquilinos
 WHERE id_inquilino = <2>;
 ```
 *Donde <2> representa el id del inquilino seleccionado para realizar la búsqueda del inquilino a editar*
+
+| Codigo Requerimiento  |R-025| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-039, I-040, I-045| 
+| Imagen interfaz       |![image](I039.jpg)|
+| Imagen interfaz       |![image](I040.jpg)|
+| Imagen interfaz       |![image](I045.jpg)|
+
+## Sentencias SQL
+### Eventos I-039:
+* **Carga de página:** Se llenará el apartado de incidencias con todas las incidencias registradas.
+```sql
+	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
+	from registro_de_incidencia rdi, instalacion i
+	where rdi.id_instalacion = i.id_instalacion;
+    --limit 4 offset $1;
+```
+* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solos las incidencias con estado pendiente.
+```sql
+	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
+	from registro_de_incidencia rdi, instalacion i
+	where rdi.id_instalacion = i.id_instalacion and rdi.estado = 'Pendiente';
+	--limit 4 offset $1;
+```
+
+* **2. Botón de Ordenar por: Estado Programado:** Muestra solos las incidencias con estado programado.
+```sql
+	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
+	from registro_de_incidencia rdi, instalacion i
+	where rdi.id_instalacion = i.id_instalacion and rdi.estado = 'Programado';
+	--limit 4 offset $1;
+```
+* **3. Botón de Ordenar por: Fecha más antigua:** Muestra las incidencias de la más antigua a la más reciente por la fecha registrada.
+```sql
+	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
+	from registro_de_incidencia rdi, instalacion i
+	where rdi.id_instalacion = i.id_instalacion
+	order by rdi.fecha_hora_registro asc;
+	--limit 4 offset $1;
+```
+### Eventos I-040, I045:
+* **Carga de página:** Se llenará el apartado de instalaciones y el apartado de nombre de encargado.
+
+```sql
+	select id_instalacion , nombre_instalacion 
+	from instalacion
+	order by substr(nombre_instalacion, 1, 1);
+
+    select id_empleado , first_last_name, second_last_name 
+	from empleado where cargo = 'Supervisor';
+```
+* **Botón de Aceptar:** Se registrará la programación de mantenimiento
+```sql
+	insert into program_mantenimiento (id_encargado, id_instalacion, prioridad,plazo, descripcion, cod_incidencia)
+	values (<1>, <2>, <3>, <4>, <5>, cod_incidencia_asociado);
+
+    update registro_de_incidencia 
+	set estado = 'Programado' where cod_incidencia = cod_incidencia_asociado
+
+```
+| Codigo Requerimiento  |R-026| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-041| 
+| Imagen interfaz       |![image](I041.jpg)|
+### Eventos:
+* **Carga de página:** Se llenará el apartado de programaciones realizadas con los registros.
+```sql
+    select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm , instalacion i, prioridad p, empleado e 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado;
+	--limit 4 offset $1;
+```
+* **Cargar apartado de buscar encargado**
+ ```sql
+    select id_empleado , first_last_name, second_last_name 
+	from empleado where cargo ='Supervisor';   
+```   
+
+* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solo las programaciones de mantenimiento que no se han realizado todavía.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado and pm.estado = 'Pendiente';
+	--limit 4 offset $1;
+```
+* **2. Botón de Ordenar por: Estado Hecho:** Muestra solo las programaciones de mantenimiento que ya se realizaron.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado and pm.estado = 'Hecho';
+	--limit 4 offset $1;
+```
+
+* **3. Botón de Ordenar por: Plazo más reciente:** Muestra solo las programaciones de mantenimiento ordenado por el plazo del más reciente al más antiguo.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado
+	order by pm.plazo desc ;
+	--limit 4 offset $1;
+```
+
+* **4. Buscar por encargado:** Muestra solo las programaciones de mantenimiento de cierto encargado.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm , instalacion i, prioridad p, empleado e 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = <4>;
+	--limit 4 offset $1;
+```
+| Codigo Requerimiento  |R-027| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-042, I-043, I-045| 
+| Imagen interfaz       |![image](I042.jpg)|
+| Imagen interfaz       |![image](I043.jpg)|
+| Imagen interfaz       |![image](I045.jpg)|
+### Eventos I-042:
+* **Carga de página:** Se llenará el apartado de Registrar mantenimiento con todos los mantenimientos asignados a un encargado en específico.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm , instalacion i, prioridad p, empleado e 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado';
+	--limit 4 offset $1;
+```
+
+* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solo las programaciones de mantenimiento que no se han realizado todavía con respecto a un encargado.
+
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado' and pm.estado = 'Pendiente';
+```
+* **2. Botón de Ordenar por: Estado Hecho:** Muestra solo las programaciones de mantenimiento que se han realizado con respecto a un encargado.
+
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado' and pm.estado = 'Hecho';
+```
+* **3. Botón de Ordenar por: Plazo más reciente:** Muestra solo las programaciones de mantenimiento ordenado por el plazo del más reciente al más antiguo con respecto a un encargado.
+```sql
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
+	where pm.id_instalacion = i.id_instalacion
+	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado'
+	order by pm.plazo desc ;
+```
+
+* **4. Buscar por instalación:** Muestra solo las programaciones de mantenimiento con respecto a una instalación.
+
+```sql
+	select id_instalacion , nombre_instalacion 
+	from instalacion
+	order by substr(nombre_instalacion, 1, 1);
+```
+```sql
+    select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
+	from program_mantenimiento pm , instalacion i, prioridad p, empleado e 
+	where pm.id_instalacion = <4>
+	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado' ;
+```
+### Eventos I-043, I-045:
+* **Botón de Aceptar:** Se registrará el mantenimiento hecho.
+```sql
+	insert into registro_mantenimiento (dod_mantenimiento, id_instalacion, fecha_realizada, hora_inicio, hora_fin, observaciones)
+	values ('cod_mant', 'id_inst', <1>, <2>, <3>, <4>);
+
+	update program_mantenimiento 
+	set estado = 'Hecho', where dod_mantenimiento = 'cod_mant';
+```
+
+| Codigo Requerimiento  |R-028| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-038, I-045| 
+| Imagen interfaz       |![image](I038.jpg)|
+| Imagen interfaz       |![image](I045.jpg)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de página:** Se llenará el apartado de instalaciones con todas las instalaciones registrados.
+```sql
+	select id_instalacion , nombre_instalacion 
+	from instalacion
+	order by substr(nombre_instalacion, 1, 1);
+```
+* **Botón de Aceptar:** Se registrará la incidencia
+```sql
+	insert into registro_de_incidencia(
+    id_empleado, id_instalacion, descripcion, fecha_hora_registro)
+	values (<1>, <2>, <3>, 'fecha_hora_automática');
+```
