--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -25,3 +25,18 @@
 | 3       | En la pantalla I-021 se muestra el registro del inquilino agregado correctamente <br><br>![image](I021.png)|
 | 4       | El usuario tendrá la oportunidad de Editar cualquier registro de un usuario luego de seleccionar al inquilino y presionar el botón "Eliminar", se le mostrará la ventana emergente I-023<br><br>![image](I023.png)|
 | 5       | ![image](I024.png)|
+
+## MÓDULO 8: GESTION DE MANTENIMIENTOS PROGRAMADOS
+
+* **Función Primaria:** La función primaria se centrará en programar los mantenimientos correctivos que va a ir desde el registro de una incidencia hasta el registro de la programación de mantenimiento con relación a esa incidencia.
+
+* **Sustentación:** Esto es muy importante porque practicamente permite gestionar de una mejor manera el proceso para realizar mantenimiento correctivo.
+
+|Actividad| Descripcion       | 
+|---------|-------------------|
+| 1       |En este apartado se registrará cierta incidencia para luego realizar su correspondiente programación de mantenimiento<br><br> ![image](I038.jpg)| 
+| 2       | Se hará click en la opción 'Aceptar' si se desea que se registre la incidencia <br><br>![image](I045.jpg)| 
+| 3       | En este apartado se visualizará todas las incidencia que han sido registradas y a partir de esas incidencias se realizará el respectivo programación de mantenimiento<br><br>![image](I039.jpg)|
+| 4       | En esta pantalla se realizará la entrada de datos correspondiente para realizar la programación de mantenimiento y se presiona el botón de confirmar.<br><br>![image](I040.jpg)|
+| 5       | Se mostrara una pantalla de seguridad y se da 'Aceptar' para registrar la programación de mantenimiento![image](I045.jpg)|
+
