--- a/0/0.2_Joel/0.2.md
+++ b/0/0.2_Joel/0.2.md
@@ -34,3 +34,5 @@
 |-----------|-------------------|
 |Practica N1| https://youtu.be/mmeTt32NI9s|
 |Practica N2| https://youtu.be/EVKJp-dsIkw|
+|Practica N3| https://youtu.be/UsODm53kVJk|
+
