--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -396,6 +396,76 @@ WHERE id_inquilino = <2>;
 ```
 *Donde <2> representa el id del inquilino seleccionado para realizar la búsqueda del inquilino a editar*
 
+| Codigo Requerimiento  |R-015| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-015| 
+| Imagen interfaz       |![image](I025.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Consulta para la generacion de facturas
+```sql
+INSERT INTO Factura (id_factura, estado_factura, fecha_emision, monto_total, fecha_vencimiento, id_inquilino)
+SELECT
+    'F' || LPAD(nextval('factura_seq')::text, 6, '0') AS "id_factura",
+    'Pendiente' AS "estado_factura",
+    ca.fecha_inicio AS "fecha_emision",
+    ca.monto AS "monto_total",
+    ca.fecha_vencimiento AS "fecha_vencimiento",
+    i.id_inquilino AS "id_inquilino"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+WHERE
+    ca.estado = 'Activo';
+```
+
+* **Filtrar por estado del contrato :** El usuario elegirá el filtro "estado".
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.id_persona AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+WHERE ca.estado = <2>;
+
+```
+
+* **Filtrar contratos próximos a vencer :** El usuario elegirá el filtro "proximos a vencer".
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.id_persona AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY ca.fecha_vencimiento DESC;
+```
+
 | Codigo Requerimiento  |R-025| 
 |-----------------------|-------|
 | Codigo Interfaz       |I-039, I-040, I-045| 
