--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -1,13 +1,13 @@
 # 8.2. Alcance del Piloto (Funcionalidad primaria por módulo)
 ## MÓDULO 3: ARRENDAMIENTOS
-* **Función Primaria:** 
-* **Sustentación:** 
+* **Función Primaria: Gestionar y optimizar todo el proceso de arrendamiento de los locales comerciales, incluyendo contratos, pagos y seguimiento de incidencias, para garantizar un control eficiente de los ingresos y la ocupación en MallPlaza.** 
+* **Sustentación: La gestión centralizada de los arrendamientos facilita la creación, seguimiento y renovación de contratos, y asegura un control preciso de los pagos y vencimientos. Esto reduce errores administrativos y mejora la eficiencia operativa, asegurando un flujo de ingresos constante y transparente.** 
 
 |Actividad| Descripcion       | 
 |---------|-------------------|
 | 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Contratos" se mostrará la pantalla I-011 donde se podrá visualizar la tabla de los contratos los cuales estan registrados en MallPlaza<br><br> ![image](I011.png)| 
-| 2       | texto <br><br>![image](I012.png)| 
-| 3       | texto <br><br>![image](I013.png)|
+| 2       | Al pasar sobre cualquier contrato dentro de la tabla se podrá seleccionar para poder el contrato en mayor detalle <br><br>![image](I015.png)| 
+| 3       | El usuario tendrá la opcion de poder editar algunos puntos del registro del contrato <br><br>![image](I016.png)|
 | 4       | texto <br><br>![image](I014.png)| 
 | 5       | texto <br><br>![image](I015.png)|
 | 6       | texto <br><br>![image](I016.png)|
