--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -8,11 +8,10 @@
 | 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Contratos" se mostrará la pantalla I-011 donde se podrá visualizar la tabla de los contratos los cuales estan registrados en MallPlaza<br><br> ![image](I011.png)| 
 | 2       | Al pasar sobre cualquier contrato dentro de la tabla se podrá seleccionar para poder el contrato en mayor detalle <br><br>![image](I015.png)| 
 | 3       | El usuario tendrá la opcion de poder editar algunos puntos del registro del contrato <br><br>![image](I016.png)|
-| 4       | texto <br><br>![image](I014.png)| 
-| 5       | texto <br><br>![image](I015.png)|
-| 6       | texto <br><br>![image](I016.png)|
-| 7       | texto <br><br>![image](I017.png)|
-| 8       | texto <br><br>![image](I018.png)|
+| 4       | El usuario tendra la opcion de visualizar los espacios comerciales dentro de MallPlaza, para ellos tendra que dirigirse a la sección "Objetos de alquiler" que esta dentro del modulo de "Arrendamientos"<br><br>![image](I013.png)| 
+| 5       | Al pasar por cualquier espacio comercial el usuario podrá seleccionarlo y ver mas detalles del objeto de alquiler <br><br>![image](I017.png)|
+| 6       | De igual forma que los contratos, el usuario podrá editar detalles del espacio comercial <br><br>![image](I018.png)|
+
 
 ## MÓDULO 4: INQUILINOS
 * **Función Primaria:** Centralizar y gestionar de manera eficiente toda la información relevante de los inquilinos para optimizar el control y seguimiento de los arrendamientos en MallPlaza.
