--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -465,6 +465,27 @@ JOIN
     Persona p ON i.id_persona = p.id_persona
 ORDER BY ca.fecha_vencimiento DESC;
 ```
+| Codigo Requerimiento  |R-017| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-017| 
+| Imagen interfaz       |![image](I027.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Consulta para la generacion de facturas
+```sql
+INSERT INTO pagos_tabla (nro_factura, monto_pago, metodo_pago, fecha_pago)
+VALUES (<nro_factura>,     -- número de la factura seleccionada
+        <monto_pago>,      -- monto del pago ingresado
+        <metodo_pago>,     -- método de pago seleccionado (Ej. 'Efectivo', 'Tarjeta', 'Transferencia')
+        <fecha_pago>);     -- fecha del pago (puede ser la fecha actual o la proporcionada por el usuario)
+
+-- Actualizar estado de la factura (si es necesario)
+UPDATE facturas_tabla
+SET estado_factura = 'Pagada'  -- o 'Pendiente', según el estado
+WHERE nro_factura = <nro_factura>;
+```
+
 
 | Codigo Requerimiento  |R-025| 
 |-----------------------|-------|
