--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -25,6 +25,19 @@
 | 4       | El usuario tendrá la oportunidad de Editar cualquier registro de un usuario luego de seleccionar al inquilino y presionar el botón "Eliminar", se le mostrará la ventana emergente I-023<br><br>![image](I023.png)|
 | 5       | ![image](I024.png)|
 
+## MÓDULO 6: RECOBROS
+* **Función Primaria: Gestionar y optimizar todo el proceso de recobros de servicios, para garantizar una satisfaccion completa de los inquilinos en MallPlaza.** 
+* **Sustentación: La gestión centralizada de los recobros facilita el proceso por el cual se realiza el recobro tanto por la solicitud, la planificacion, la negocioacion, registro de acuerdo y ase4gura un seguimiento sencillo y rapido seguimiento al proyecto del recobro. De esta forma tambien se mejora el uso del tiempo y el acceso a los archivos correspondientes.** 
+
+|Actividad| Descripcion       | 
+|---------|-------------------|
+| 1       | Luego ingresar a la sección de "Recobros" y darle click a la sección de "Visualizar recobros" se mostrará la pantalla I-029 donde se podrá visualizar la tabla de los Recobros correspondientes al inquilino los cuales estan registrados en MallPlaza<br><br> ![image](I029.png)| 
+| 2       | Al presionar sobre el boton de  "Nuevo recobro" el inquilino se dirigira a la pantalla I-030 donde se le mostrara un formulario para la solicitud del nuevo recobro, al finalizar de rellenar el formulario tendra que presionar el boton de "Enviar" para que se registre la solicitud en el sistema  y el inquilino se dirigirá a a la pantalla I-029 <br><br>![image](I030.png)| 
+| 3       | En la pantalla I-031, el administrador planificara el proyecto para realizar el servicio de recobro usando un flujo de actividades conectando las actividades con unas flechas  que señalan la secuencia de estas actividades, al presionar "Eliminar proyecto" se cancela la planificacion, al presionar "Agregar actividad" se añade un nuevo cuadro de actividad, al presionar "Eliminar actividad" se eliminar la actividad seleccionada y las flechas de flujo  relacionadas a dicha actividad, al presionar "Finalizar planificacion" se registra la plan del proyecto en el sistema<br><br>![image](I031.png)|
+| 4       | En la pantalla I-029 cuando el usuario presione el boton de "Detalles" se dirigira hacia la pantalla I-032 donde se le mostraran los detalles del acuerdo. En el caso de ser un administrador se le mostrara un boton de "Editar acuerdo", en el caso de ser un inquilino no se le mostrará este boton. Para ambos usuarios se les mostrara el botorn de regresar que los dirigira a la pantalla I-29<br><br>![image](I032.png)| 
+| 5       | Cuando el administrador presione el boton de "Editar acuerdo" se le dirigira a la pantalla I-033 donde podra modificar algunos datos del acuerdo. Al presionar el boton de "Guardar cambios se le regresará a la pantalla I-032 con los datos modificados, al presionar el boton cancelar se le regresará a la pantalla I-032 sin los datos modificados" <br><br>![image](I033.png)|
+
+
 ## MÓDULO 8: GESTION DE MANTENIMIENTOS PROGRAMADOS
 
 * **Función Primaria:** La función primaria se centrará en programar los mantenimientos correctivos que va a ir desde el registro de una incidencia hasta el registro de la programación de mantenimiento con relación a esa incidencia.
