--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -398,7 +398,7 @@ WHERE id_inquilino = <2>;
 
 | Codigo Requerimiento  |R-015| 
 |-----------------------|-------|
-| Codigo Interfaz       |I-015| 
+| Codigo Interfaz       |I-025| 
 | Imagen interfaz       |![image](I025.png)|
 
 ## Sentencias SQL
@@ -467,12 +467,12 @@ ORDER BY ca.fecha_vencimiento DESC;
 ```
 | Codigo Requerimiento  |R-017| 
 |-----------------------|-------|
-| Codigo Interfaz       |I-017| 
+| Codigo Interfaz       |I-028| 
 | Imagen interfaz       |![image](I028.png)|
 
 ## Sentencias SQL
 ### Eventos:
-* **Consulta para la generacion de facturas
+* **Insertar datos para registrar pago
 ```sql
 INSERT INTO pagos_tabla (nro_factura, monto_pago, metodo_pago, fecha_pago)
 VALUES (<nro_factura>,     -- número de la factura seleccionada
