--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -485,6 +485,31 @@ UPDATE facturas_tabla
 SET estado_factura = 'Pagada'  -- o 'Pendiente', según el estado
 WHERE nro_factura = <nro_factura>;
 ```
+| Codigo Requerimiento  |R-017| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-029| 
+| Imagen interfaz       |![image](I029.png)|
+
+| Codigo Requerimiento  |R-018| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-030| 
+| Imagen interfaz       |![image](I030.png)|
+
+| Codigo Requerimiento  |R-019| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-031| 
+| Imagen interfaz       |![image](I031.png)|
+
+| Codigo Requerimiento  |R-020| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-032| 
+| Imagen interfaz       |![image](I032.png)|
+
+| Codigo Requerimiento  |R-021| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-033, I-034| 
+| Imagen interfaz       |![image](I033.png)|
+| Imagen interfaz       |![image](I034.png)|
 
 
 | Codigo Requerimiento  |R-025| 
