--- a/0/0.5_Piero/0.5.md
+++ b/0/0.5_Piero/0.5.md
@@ -36,3 +36,7 @@ https://www.youtube.com/watch?v=GFpKeq9AyE8
 * Practica 2:
 
 https://youtu.be/L76y1xbuloI
+
+* Practica 3:
+  
+https://youtu.be/uWc9FDI86tg
