--- a/8/8.3/8.3.md
+++ b/8/8.3/8.3.md
@@ -1,3 +1,16 @@
 # 8.3. Stack Tecnológico Elegido
 
-Sample content for section 8.3.
+## STACK TECNOLÓGICO
+Reflex y Python (Backend y Frontend): Aprovecharemos la capacidad de Reflex para manejar tanto la lógica de negocio como la interfaz de usuario en Python, lo que te permitirá simplificar el flujo de trabajo sin tener que cambiar de lenguaje.
+
+PostgreSQL y pgAdmin: Ya que son excelentes para manejar consultas SQL complejas y es compatible con la mayoría de los ORM en Python. Con pgAdmin, podremos gestionar y visualizar nuestros datos fácilmente, además de monitorear el rendimiento de la base de datos.
+
+Visual Studio Code (VSC): Nos ayudará a configurar extensiones como Python, PostgreSQL y Reflex para agilizar el desarrollo, además de utilizar linters y formateadores para mantener el código ordenado y legible.
+
+| HERRRAMIENTAS DE DESARROLLO | DETALLE |
+|-----------------------------|---------|
+| REFLEX                      | <img src="https://avatars.githubusercontent.com/u/104714959" width="50"/> |
+| PYTHON                      | <img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" width="50"/> |
+| POSTGRESQL                  | <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png" width="50"/> |
+| VISUAL STUDIO CODE          | <img src="https://user-images.githubusercontent.com/29654835/27530003-e78876b8-5a13-11e7-8863-83fbdb900f72.png" width="50"/> |
+| GITHUB                      | <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="50"/> |
