--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -715,3 +715,30 @@ WHERE nro_factura = <nro_factura>;
     id_empleado, id_instalacion, descripcion, fecha_hora_registro)
 	values (<1>, <2>, <3>, 'fecha_hora_automática');
 ```
+| Codigo Requerimiento  |R-29| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-046| 
+| Imagen interfaz       |![image](I046.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de los datos de un Evento:** Se llenará la tabla de Eventos
+* **Botón de Aceptar:** Se registrará la programación de mantenimiento
+```sql
+insert into Evento(
+  nombre_evento, 
+  descripcion, 
+  categoria, 
+  objetivo, 
+  fecha_inicio, 
+  fecha_fin,
+) VALUES (
+  <1>,
+  <2>,
+  <3>,
+  <4>,
+  <5>,
+  <6>,
+);
+```
+
