--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -723,7 +723,7 @@ WHERE nro_factura = <nro_factura>;
 ## Sentencias SQL
 ### Eventos:
 * **Carga de los datos de un Evento:** Se llenará la tabla de Eventos
-* **Botón de Aceptar:** Se registrará la programación de mantenimiento
+* **Botón de Siguiente:** Se registrará la programación de mantenimiento
 ```sql
 insert into Evento(
   nombre_evento, 
@@ -742,3 +742,16 @@ insert into Evento(
 );
 ```
 
+| Codigo Requerimiento  |R-30| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-046| 
+| Imagen interfaz       |![image](I046.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Filtro de datos de Zona común:** Se mandará una lista con las conincidencias de id_espacio_comun y se mostrarán en una lista para seleccionar.
+```sql
+SELECT * 
+FROM Espacio_comun
+WHERE id_espacio_comun LIKE '%<cadena_texto>%';
+```
