--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -746,6 +746,7 @@ insert into Evento(
 |-----------------------|-------|
 | Codigo Interfaz       |I-046| 
 | Imagen interfaz       |![image](I046.png)|
+| Imagen interfaz       |![image](I046-1.png)|
 
 ## Sentencias SQL
 ### Eventos:
