--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -732,6 +732,7 @@ insert into Evento(
   objetivo, 
   fecha_inicio, 
   fecha_fin,
+  id_inquilino,
 ) VALUES (
   <1>,
   <2>,
@@ -739,6 +740,7 @@ insert into Evento(
   <4>,
   <5>,
   <6>,
+  <7>,
 );
 ```
 
