--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -754,7 +754,7 @@ insert into Evento(
 ### Eventos:
 * **Filtro de datos de Zona común:** Se mandará una lista con las conincidencias de id_espacio_comun y se mostrarán en una lista para seleccionar.
 ```sql
-SELECT * 
+SELECT id_espacio_comun
 FROM Espacio_comun
 WHERE id_espacio_comun LIKE '%<cadena_texto>%';
 ```
