--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -1,4 +1,129 @@
 # 8.1. Sentencias SQL por módulo / prototipo
+
+# 8.1. Sentencias SQL por módulo / prototipo
+
+| Codigo Requerimiento  |R-05| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-003, I-008| 
+| Imagen interfaz       |![image](I003.png)| 
+| Imagen interfaz       |![image](I008.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página de Empleados:** Se llenará la tabla de todos los empleados en MallPlaza
+```sql
+
+SELECT * FROM inquilinos_tabla
+WHERE id_inquilino = <2> 
+
+```
+
+* **Boton Registrar:** Cuando se selecciona muestra los campos a llenar del nuevo empleado.
+```sql
+INSERT INTO Empleado (id_empleado, cargo, first_last_name, second_last_name, fecha_nacimiento, id_persona, id_contrato_empleado)
+VALUES
+(<E120>,
+ <Administrador de mantenimiento>,
+ <Gomez>,
+ <Sanchez>,
+ <1990-06-15>,
+ <P175>,
+ <C150>);
+
+```
+
+
+| Codigo Requerimiento  |R-06| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-003| 
+| Imagen interfaz       |![image](I003.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página de Empleados:** Se llenará la tabla de todos los empleados en MallPlaza
+```sql
+
+SELECT * FROM inquilinos_tabla
+WHERE id_inquilino = <2> 
+
+```
+
+* **Boton Vinculados:** Cuando se selecciona muestra los empleados con contrato vigente.
+
+```sql
+SELECT E.id_empleado, E.cargo, E.first_last_name, E.second_last_name, E.fecha_nacimiento
+FROM Empleado E
+JOIN Contrato_Empleado C ON E.id_contrato_empleado = C.id_contrato_empleado
+WHERE C.estado_contrato = 'Activo';
+
+```
+
+
+| Codigo Requerimiento  |R-07| 
+|-----------------------|-------|
+| Codigo Interfaz       |I004, I-005, I-006| 
+| Imagen interfaz       |![image](I004.png)| 
+| Imagen interfaz       |![image](I005.png)| 
+| Imagen interfaz       |![image](I006.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página del Empleado:** Se mostrará en pantalla los datos del empleado seleccionado.
+```sql
+
+SELECT * FROM inquilinos_tabla
+WHERE id_inquilino = <2> 
+
+```
+Donde <2> representa el id del empleado seleccionado
+
+* **Boton Ver contrato:** Cuando se selecciona muestra los detalles del contrato.
+
+```sql
+SELECT E.last_name, E.second_last_name, E.cargo, C.fecha_inicio, C.fecha_fin, C.estado_contrato, C.jornada_laboral
+FROM Contrato_empleado C
+JOIN Empleado E ON E.id_contrato_empleado = C.id_contrato_empleado
+WHERE C.estado_contrato = 'Activo';
+
+```
+Donde <1> representa el id del empleado a renovar
+
+* **Boton Renovar:** Cuando se selecciona cargará los datos del empleado, solo permitirá modificar la fecha de finalización del contrato.
+
+```sql
+UPDATE Contrato_Empleado
+SET fecha_fin = <AAAA-MM-DD>
+WHERE id_contrato_empleado = <1>;
+
+```
+Donde <1> representa el id del empleado a renovar
+
+
+| Codigo Requerimiento  |R-08| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-010| 
+| Imagen interfaz       |![image](I008.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página de Empleados:** Se llenará la tabla de todos los empleados en MallPlaza
+```sql
+
+SELECT FROM Empleados; --Vista creada en la base de datos
+
+```
+
+* **Boton Desvinculados:** Cuando se selecciona muestra los empleados con contrato no vigente.
+
+```sql
+SELECT E.id_empleado, E.cargo, E.first_last_name, E.second_last_name, E.fecha_nacimiento
+FROM Empleado E
+JOIN Contrato_Empleado C ON E.id_contrato_empleado = C.id_contrato_empleado
+WHERE C.estado_contrato IN ('Suspendido', 'Finalizado');
+
+
+```
+
 | Codigo Requerimiento  |R-09| 
 |-----------------------|-------|
 | Codigo Interfaz       |I-011| 
