--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -754,7 +754,13 @@ insert into Evento(
 ### Eventos:
 * **Filtro de datos de Zona común:** Se mandará una lista con las conincidencias de id_espacio_comun y se mostrarán en una lista para seleccionar.
 ```sql
-SELECT id_espacio_comun
-FROM Espacio_comun
-WHERE id_espacio_comun LIKE '%<cadena_texto>%';
+SELECT DISTINCT e.id_espacio_comun
+FROM Espacio_comun e
+LEFT JOIN Fecha f ON e.id_espacio_comun = f.id_espacio_comun
+WHERE (
+    f.fecha_inicio IS NULL OR 
+    f.fecha_fin < '2024-01-01' OR 
+    f.fecha_inicio > '2024-01-10'
+) 
+AND e.id_espacio_comun LIKE '%<cadena>%';
 ```
