--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -37,6 +37,13 @@
 | 4       | En la pantalla I-029 cuando el usuario presione el boton de "Detalles" se dirigira hacia la pantalla I-032 donde se le mostraran los detalles del acuerdo. En el caso de ser un administrador se le mostrara un boton de "Editar acuerdo", en el caso de ser un inquilino no se le mostrará este boton. Para ambos usuarios se les mostrara el botorn de regresar que los dirigira a la pantalla I-29<br><br>![image](I032.PNG)| 
 | 5       | Cuando el administrador presione el boton de "Editar acuerdo" se le dirigira a la pantalla I-033 donde podra modificar algunos datos del acuerdo. Al presionar el boton de "Guardar cambios se le regresará a la pantalla I-032 con los datos modificados, al presionar el boton cancelar se le regresará a la pantalla I-032 sin los datos modificados" <br><br>![image](I033.PNG)|
 
+## MÓDULO 7: EVENTOS
+|Actividad| Descripcion       | 
+|---------|-------------------|
+| 1       | Luego ingresar a la sección de "Eventos" y darle click a la sección de "Crear Evento" se mostrará la siguiente pantalla <br><br> ![image](I046.png) | 
+| 2       | En ella se realizará el registro del evento llenando cada campo con su respectivo valor | 
+| 3       | Después de llenar las fechas de inicio y final se podrá realizar la búsqueda de las zonas comunes disponibles en el intervalo de fechas seleccionadas | 
+
 
 ## MÓDULO 8: GESTION DE MANTENIMIENTOS PROGRAMADOS
 
