--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -649,20 +649,15 @@ WHERE nro_factura = <nro_factura>;
 	where rdi.id_instalacion = i.id_instalacion;
     --limit 4 offset $1;
 ```
-* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solos las incidencias con estado pendiente.
+* **1 - 2 . Botón de Ordenar por: Estado Pendiente o Programado:** Permite filtrar los registros mediante su estado.
 ```sql
 	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
-	from registro_de_incidencia rdi, instalacion i
-	where rdi.id_instalacion = i.id_instalacion and rdi.estado = 'Pendiente';
-	--limit 4 offset $1;
-```
-
-* **2. Botón de Ordenar por: Estado Programado:** Muestra solos las incidencias con estado programado.
-```sql
-	select rdi.cod_incidencia, i.nombre_instalacion, rdi.descripcion, rdi.fecha_hora_registro, rdi.estado
-	from registro_de_incidencia rdi, instalacion i
-	where rdi.id_instalacion = i.id_instalacion and rdi.estado = 'Programado';
-	--limit 4 offset $1;
+	from registro_de_incidencia rdi
+	inner join instalacion i on rdi.id_instalacion = i.id_instalacion 
+	where (case when est = 'Pendiente' then rdi.estado = 'Pendiente'
+				when est = 'Programado' then rdi.estado = 'Programado'
+				else 1 = 0 
+			end);
 ```
 * **3. Botón de Ordenar por: Fecha más antigua:** Muestra las incidencias de la más antigua a la más reciente por la fecha registrada.
 ```sql
@@ -678,7 +673,7 @@ WHERE nro_factura = <nro_factura>;
 ```sql
 	select id_instalacion , nombre_instalacion 
 	from instalacion
-	order by substr(nombre_instalacion, 1, 1);
+	order by nombre_instalacion;
 
     select id_empleado , first_last_name, second_last_name 
 	from empleado where cargo = 'Supervisor';
@@ -712,23 +707,20 @@ WHERE nro_factura = <nro_factura>;
 	from empleado where cargo ='Supervisor';   
 ```   
 
-* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solo las programaciones de mantenimiento que no se han realizado todavía.
+* **1 - 2. Botón de Ordenar por: Estado Pendiente o Hecho:** Muestra las programaciones de mantenimiento que por su estado.
 ```sql
-	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
+	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo,
 	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
-	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
-	where pm.id_instalacion = i.id_instalacion
-	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado and pm.estado = 'Pendiente';
-	--limit 4 offset $1;
-```
-* **2. Botón de Ordenar por: Estado Hecho:** Muestra solo las programaciones de mantenimiento que ya se realizaron.
-```sql
-	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
-	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
-	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
-	where pm.id_instalacion = i.id_instalacion
-	and pm.prioridad = p.prioridad and pm.id_encargado = e.id_empleado and pm.estado = 'Hecho';
-	--limit 4 offset $1;
+	from program_mantenimiento pm
+	inner join instalacion i on pm.id_instalacion = i.id_instalacion 
+	inner join empleado e on pm.id_encargado = e.id_empleado 
+	inner join prioridad p on pm.prioridad = p.prioridad 
+	where
+		(case when est = 'Pendiente' then pm.estado = 'Pendiente'
+			when est = 'Hecho' then pm.estado = 'Hecho'
+			else 1 = 0
+		end
+		);
 ```
 
 * **3. Botón de Ordenar por: Plazo más reciente:** Muestra solo las programaciones de mantenimiento ordenado por el plazo del más reciente al más antiguo.
@@ -768,24 +760,22 @@ WHERE nro_factura = <nro_factura>;
 	--limit 4 offset $1;
 ```
 
-* **1. Botón de Ordenar por: Estado Pendiente:** Muestra solo las programaciones de mantenimiento que no se han realizado todavía con respecto a un encargado.
-
+* **1-2. Botón de Ordenar por: Estado Pendiente o Hecho:** Muestra solo las programaciones de mantenimiento por su estado
 ```sql
 	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
 	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
-	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
-	where pm.id_instalacion = i.id_instalacion
-	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado' and pm.estado = 'Pendiente';
+	from program_mantenimiento pm
+	inner join instalacion i on pm.id_instalacion = i.id_instalacion 
+	inner join empleado e on pm.id_encargado = e.id_empleado 
+	inner join prioridad p on pm.prioridad = p.prioridad 
+	where
+		( case when estad = 'Pendiente' then pm.estado = 'Pendiente'
+			   when estad = 'Hecho' then pm.estado = 'Hecho' 
+			   else 1 = 0
+			   
+		end);
 ```
-* **2. Botón de Ordenar por: Estado Hecho:** Muestra solo las programaciones de mantenimiento que se han realizado con respecto a un encargado.
 
-```sql
-	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
-	p.descrip_prioridad , pm.estado, e.first_last_name, e.second_last_name 
-	from program_mantenimiento pm, instalacion i, empleado e, prioridad p 
-	where pm.id_instalacion = i.id_instalacion
-	and pm.prioridad = p.prioridad and pm.id_encargado = 'id_empleado_logueado' and pm.estado = 'Hecho';
-```
 * **3. Botón de Ordenar por: Plazo más reciente:** Muestra solo las programaciones de mantenimiento ordenado por el plazo del más reciente al más antiguo con respecto a un encargado.
 ```sql
 	select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
@@ -801,7 +791,7 @@ WHERE nro_factura = <nro_factura>;
 ```sql
 	select id_instalacion , nombre_instalacion 
 	from instalacion
-	order by substr(nombre_instalacion, 1, 1);
+	order by nombre_instalacion;
 ```
 ```sql
     select pm.dod_mantenimiento , i.nombre_instalacion , pm.descripcion , pm.plazo ,
@@ -832,7 +822,7 @@ WHERE nro_factura = <nro_factura>;
 ```sql
 	select id_instalacion , nombre_instalacion 
 	from instalacion
-	order by substr(nombre_instalacion, 1, 1);
+	order by nombre_instalacion;
 ```
 * **Botón de Aceptar:** Se registrará la incidencia
 ```sql
