--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -615,15 +615,25 @@ WHERE nro_factura = <nro_factura>;
 | Codigo Interfaz       |I-029| 
 | Imagen interfaz       |![image](I029.PNG)|
 
+## Sentencias SQL
+### Eventos:
+
+
 | Codigo Requerimiento  |R-019| 
 |-----------------------|-------|
 | Codigo Interfaz       |I-030| 
 | Imagen interfaz       |![image](I030.PNG)|
 
+## Sentencias SQL
+### Eventos:
+
 | Codigo Requerimiento  |R-20| 
 |-----------------------|-------|
 | Codigo Interfaz       |I-031| 
 | Imagen interfaz       |![image](I031.PNG)|
+
+## Sentencias SQL
+### Eventos:
 
 | Codigo Requerimiento  |R-021| 
 |-----------------------|-------|
@@ -631,7 +641,8 @@ WHERE nro_factura = <nro_factura>;
 | Imagen interfaz       |![image](I032.PNG)|
 | Imagen interfaz       |![image](I033.PNG)|
 
-
+## Sentencias SQL
+### Eventos:
 
 | Codigo Requerimiento  |R-025| 
 |-----------------------|-------|
